--- a/train.html
+++ b/train.html
@@ -8,7 +8,6 @@
   {{> hello}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="home">
+  <h1>Home</h1>
 </template>
