--- a/train.html
+++ b/train.html
@@ -3,29 +3,9 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  <script src="https://code.jquery.com/jquery-2.1.1.js"  charset="UTF-8"></script>
+  {{> home}}
 </body>
 
 <template name="home">
-  <h1>Home</h1>	
-  	<div class="app">
-	 <div class="cards scrollable" id="cards">
-	       <ul class="card--holder">     
-	          <li class="card card--item">
-	            <div class="card--inner scrollable card--white">
-	              <p>Train Trip</p>
-	              <p class="small left">Lsjdfhkldhf dskhfjadskf adskhjf sdkfhkadshf dshfhjsdkafhds fhksdfsd fhksdjaf jdskfhds fsdjhfsdkhf sd hfksdjhfhisd fskda fkjhsdf sd fsdkjfsdfhsdkf sdf sdilfsdlif sda</p>
-					
-	            </div>
-	          </li>
-	          <li class="card card--item">
-	            <div class="card--inner scrollable card--white">
-	               <p class="small left">Lsjdfhkldhf dskhfjadskf adskhjf sdkfhkadshf dshfhjsdkafhds fhksdfsd fhksdjaf jdskfhds fsdjhfsdkhf sd hfksdjhfhisd fskda fkjhsdf sd fsdkjfsdfhsdkf sdf sdilfsdlif sda</p>
-	            </div>
-	          </li>
-	       </ul>
-	    </div>
-	    </div>
+  <h1>TrainTrip</h1>
 </template>
