Added title awaiting coffee and dynamic map background.

--- a/train.html
+++ b/train.html
@@ -1,5 +1,6 @@
 <head>
   <title>train</title>
+
 </head>
 
 <body>
@@ -7,5 +8,5 @@
 </body>
 
 <template name="home">
-  <h1>TrainTrip</h1>
+  <h1>TRAINTRIP</h1>
 </template>
