Added new pages- added iron, created multiple templates all sorts. Will get coffee soon ^-^

--- a/train.html
+++ b/train.html
@@ -4,11 +4,13 @@
 </head>
 
 <body>
-  {{> home}}
 </body>
 
 <template name="home">
   <div class="main">
-  <h1>TRAINTRIP</h1>
-  <div>
+    <h1>TRAINTRIP</h1>
+  </div>
+</template>
+<template name="items">
+  <p>Hello World</p>
 </template>
