--- a/train.html
+++ b/train.html
@@ -1,6 +1,8 @@
 <head>
   <title>train</title>
 
+  <script type="text/javascript" src="">
+  </script>
 </head>
 
 <body>
@@ -9,6 +11,12 @@
 
 <template name="home">
   <div class="main">
-  <h1>TRAINTRIP</h1>
-  <div>
+  	<div class="window">
+  		<h1>TRAINTRIP</h1>
+	</div>
+
+  	<div class="mapContainer">
+  		<div class="map" id="map"></div>
+  	</div>
+  </div>
 </template>
