Blurred map + dark overlay, also other stuff.

--- a/train.html
+++ b/train.html
@@ -13,7 +13,7 @@
   	<div class="window">
   		<h1>TRAINTRIP</h1>
 	</div>
-
+  <div class="overlay"></div>
   	<div class="mapContainer">
   		<div class="map" id="map"></div>
   	</div>
