Added some things.

--- a/train.html
+++ b/train.html
@@ -13,7 +13,7 @@
 <template name="home">
   <nav id="menu" class="menu">
   </nav>
-<button class="toggle-button">☰</button>
+  <button class="toggle-button" id="show-button">☰</button>
   <main id="panel" class="panel">
     <div class="main">
       <div class="window">
