--- a/train.html
+++ b/train.html
@@ -11,18 +11,28 @@
 </body>
 
 <template name="home">
+
   <nav id="menu" class="menu">
   </nav>
-<button class="toggle-button">☰</button>
+  <button class="toggle-button">☰</button>
+
+
   <main id="panel" class="panel">
     <div class="main">
       <div class="window">
         <h1>TRAINTRIP</h1>
+        
+        <input type="text" id="routeFrom" />
+        <input type="text" id="routeTo" />
+        <input type="button" id="routeSubmit" valud="Find route" />
+
       </div>
-      <div class="overlay"></div>
+      
       <div class="mapContainer">
         <div class="map" id="map"></div>
       </div>
+
     </div>
   </main>
+
 </template>
