Added margin to button.

--- a/train.html
+++ b/train.html
@@ -26,7 +26,7 @@
           <span>&rarr;</span>
           <input type="text" id="routeTo" class="form" placeholder="To" />
         </div>
-          <input type="button" id="routeSubmit" value="Find route" />
+          <input type="button" id="routeSubmit" value="Find route" class="button-submit" />
         </div>
         <div class="mapContainer">
           <div class="map" id="map"></div>
