--- a/train.html
+++ b/train.html
@@ -20,10 +20,12 @@
       {{/each}}
     </div>
   </nav>
+  <div class="stretchyBox">
   <button class="toggle-button-right">☰</button>
-  <button class="toggle-button-left" id="search-icon">
-    <div class="search-icon">&#9906;</div>
+  <button class="toggle-button-left" id="search-icon-container">
+    <div class="search-icon">&#9740;</div>
   </button>
+</div>
 
 
   <main id="panel" class="panel">
@@ -38,8 +40,9 @@
             <span>&rarr;</span>
             <input type="text" id="routeTo" class="form" placeholder="To" />
           </div>
+          <div class="fakeFlex">
           <input type="submit" id="routeSubmit" value="Find route" class="button-submit" />
-
+        </div>
         </form>
       </div>
 
