--- a/train.html
+++ b/train.html
@@ -1,5 +1,5 @@
 <head>
-  <title>train</title>
+  <title>TrainTrip</title>
   <meta http-equiv="cleartype" content="on">
   <meta name="MobileOptimized" content="320">
   <meta name="HandheldFriendly" content="True">
